lang/macro/tests/ui/fail/05-forbidden-ident.rs
use liquid_lang as liquid;

#[liquid::contract(version = "0.1.0")]
mod noop {
    #[liquid(storage)]
    struct Noop {}

    impl Noop {
        #[liquid(constructor)]
        fn init(&mut self) {}

        #[liquid(external)]
        fn __liquid_noop(&self) {}
    }
}

fn main() {}
