lang/macro/tests/ui/fail/05-forbidden-ident.stderr
error: identifiers starting with `__liquid` are forbidden in liquid contract
  --> $DIR/05-forbidden-ident.rs:13:12
   |
13 |         fn __liquid_noop(&self) {}
   |            ^^^^^^^^^^^^^
